# guillotine-allocator

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  allocator.cpp  kguillotineallocator.cpp  kguillotineallocator.h
src/: CMakeLists.txt  allocator.cpp  allocator.h
tests/: CMakeLists.txt  demo.cpp
